--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,9 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // JPA
+	implementation 'mysql:mysql-connector-java:8.0.28' // MySql
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0' // swagger
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
