--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
 spring.application.name=Bizee
-file.upload-dir=upload
 
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.file-size-threshold=2KB
@@ -16,5 +15,6 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
-
 jwt.secret.key=${JWT_SECRET_KEY}
+auth.admin.token=${AUTH_ADMIN_TOKEN}
+file.upload-dir=upload
